--- a/src/main/resources/templates/verMovimientos.html
+++ b/src/main/resources/templates/verMovimientos.html
@@ -22,13 +22,13 @@
 <body>
 
 <div class="container">
-    <h1> Lista de movimeintos</h1>
+    <h1> Lista de movimientos</h1>
     <!--Dibujamos la tabla-->
     <br><table class="table table-bordered">
         <tr>
             <th>ID</th>
             <th>Valor</th>
-            <th>Conceptp</th>
+            <th>Concepto</th>
             <th>Usuario Responsable</th>
             <th>Editar</th>
             <th>Eliminar</th>
@@ -39,7 +39,14 @@
         <tr th:each="movimiento : ${movlist}">
             <td th:text="${movimiento.id}"></td>
             <td th:text="${movimiento.monto}"></td>
-            <td th:text="${movimiento.concepto}"></td>
+            <td th:if="${movimiento.concepto=='1'}">Papeleria</td>
+            <td th:if="${movimiento.concepto=='2'}">Servicios publicos/privados</td>
+            <td th:if="${movimiento.concepto=='3'}">Operativos</td>
+            <td th:if="${movimiento.concepto=='4'}">Caja menor</td>
+            <td th:if="${movimiento.concepto=='5'}">Tributarios</td>
+            <td th:if="${movimiento.concepto=='6'}">Mobiliario</td>
+            <td th:if="${movimiento.concepto=='7'}">Maquinaria y equipo</td>
+            <td th:if="${movimiento.concepto=='8'}">Nomina</td>
             <td th:text="${movimiento.usuario.nombre}"></td>
             <td><button type="button" class="btn btn-warning"><a th:href="@{/EditarMovimiento/{id}(id=${movimiento.id})}">Editar</a></button></td>
             <td><button type="button" class="btn btn-danger"><a th:href="@{/EliminarMovimiento/{id}(id=${movimiento.id})}">Eliminar</a></button></td>
@@ -52,8 +59,8 @@
     <br><br>
     <!--Crear boton que lleva a la lista de empresas-->
     <button type="button" class="btn btn-primary"><a th:href="@{/verEmpresas}">Ver lista de Empresas</a></button>
-
-
+    <br><br>
+    <!--Crear boton que lleva a la lista de empleados-->
     <button type="button" class="btn btn-primary"><a th:href="@{/verEmpleados}">Ver lista de Empleados</a></button>
 </div>
 <script th:inline="javascript">
