Templates arreglados, creacion de nuevas consultas para la suma de los movimientos, todo queda funcionando

--- a/src/main/resources/templates/agregarMovimiento.html
+++ b/src/main/resources/templates/agregarMovimiento.html
@@ -64,6 +64,15 @@
                 </div>
             </div>
         </div>
+        <!--Campo para fecha-->
+        <div class="row">
+            <div class="form-group col-md-12">
+                <label class="col-md-3" for="fecha">Fecha del movimiento:</label>
+                <div class="col-md-6">
+                    <input  type="date" th:field="*{fecha}" class="form-control" id="fecha" required="true" readonly>
+                </div>
+            </div>
+        </div>
 
 
         <!--Boton para agregar la información y ejecutar la acción-->
@@ -80,6 +89,11 @@
 
 </div>
 
-
+<script th:inline="javascript">
+  window.onload=function(){
+    document.getElementById("fecha").value=new Date().toJSON().slice(0,10).replace(/-/g,'-');
+  }
+</script>
 
 </body>
+</html>
