--- a/src/main/resources/templates/editarMovimiento.html
+++ b/src/main/resources/templates/editarMovimiento.html
@@ -73,6 +73,15 @@
                 </div>
             </div>
         </div>
+        <!--Campo para fecha-->
+        <div class="row">
+            <div class="form-group col-md-12">
+                <label class="col-md-3" for="fecha">Fecha del movimiento:</label>
+                <div class="col-md-6">
+                    <input  type="date" th:field="*{fecha}" class="form-control" id="fecha" required="true" readonly>
+                </div>
+            </div>
+        </div>
 
 
         <!--Boton para agregar la información y ejecutar la acción-->
@@ -89,6 +98,5 @@
 
 </div>
 
-
-
 </body>
+</html>
