--- a/src/main/resources/templates/verMovimientos.html
+++ b/src/main/resources/templates/verMovimientos.html
@@ -30,6 +30,7 @@
             <th>Valor</th>
             <th>Concepto</th>
             <th>Usuario Responsable</th>
+            <th>fecha del movimiento</th>
             <th>Editar</th>
             <th>Eliminar</th>
         </tr>
@@ -38,7 +39,7 @@
         <!--En nuestro controlador, creamos en verempleados un modelo con un atributo llamado emplelist donde esta la lista de todas los empleados-->
         <tr th:each="movimiento : ${movlist}">
             <td th:text="${movimiento.id}"></td>
-            <td th:text="${movimiento.monto}"></td>
+            <td th:text="${#numbers.formatCurrency(movimiento.monto)}"></td>
             <td th:if="${movimiento.concepto=='1'}">Papeleria</td>
             <td th:if="${movimiento.concepto=='2'}">Servicios publicos/privados</td>
             <td th:if="${movimiento.concepto=='3'}">Operativos</td>
@@ -48,11 +49,20 @@
             <td th:if="${movimiento.concepto=='7'}">Maquinaria y equipo</td>
             <td th:if="${movimiento.concepto=='8'}">Nomina</td>
             <td th:text="${movimiento.usuario.nombre}"></td>
+            <td th:text="${#dates.format(movimiento.fecha, 'dd/MM/yyyy')}"></td>
             <td><button type="button" class="btn btn-warning"><a th:href="@{/EditarMovimiento/{id}(id=${movimiento.id})}">Editar</a></button></td>
             <td><button type="button" class="btn btn-danger"><a th:href="@{/EliminarMovimiento/{id}(id=${movimiento.id})}">Eliminar</a></button></td>
         </tr>
     </table>
 
+    <div class="row">
+        <div class="form-group col-md-12">
+            <label class="col-md-3" for="SumaMontos">Total Movimientos</label>
+            <div class="col-md-6">
+                <p th:text="${#numbers.formatCurrency(SumaMontos)}" class="form-control" id="SumaMontos"></p>
+            </div>
+        </div>
+    </div>
     <!--Crear boton para agregar un empleado nuevo-->
 
     <button type="button" class="btn btn-info"><a th:href="@{/AgregarMovimiento}">Agregar Nuevo Movimiento</a></button>
