Implementacion del Login, se agregaron cosas en los templates, el aplicativo queda funcionando con login

--- a/src/main/resources/templates/agregarMovimiento.html
+++ b/src/main/resources/templates/agregarMovimiento.html
@@ -20,7 +20,7 @@
 
 <body>
 <div class="container">
-
+    <button type="button" class="btn btn-danger" style="float:right "><a th:href="@{/logout}">Cerrar sesión</a></button>
     <h1> Agregar aqui los datos del movimiento</h1>
     <br>
     <!--Crear formulario para que ingresen los datos del emovimiento nuevo-->
