--- a/src/main/resources/templates/agregarEmpleado.html
+++ b/src/main/resources/templates/agregarEmpleado.html
@@ -20,7 +20,7 @@
 
 <body>
 <div class="container">
-
+    <button type="button" class="btn btn-danger" style="float:right "><a th:href="@{/logout}">Cerrar sesión</a></button>
     <h1> Agregar aqui los datos del Empleado</h1>
     <br>
     <!--Crear formulario para que ingresen los datos del empleado nuevo-->
@@ -61,8 +61,31 @@
                 <label class="col-md-3" for="rol">Rol del empleado:</label>
                 <div class="col-md-6">
                     <select th:field="*{rol}" class="form-control" id="rol" required="true">
-                        <option th:value=1>Administrativo</option>
-                        <option th:value=2>Operativo</option>
+                        <option th:value='ROLE_ADMIN'>Administrativo</option>
+                        <option th:value='ROLE_USER'>Operativo</option>
+                    </select>
+                </div>
+            </div>
+        </div>
+
+        <!--Campo para contraseña-->
+        <div class="row">
+            <div class="form-group col-md-12">
+                <label class="col-md-3" for="password">Contraseña del Empleado:</label>
+                <div class="col-md-6">
+                    <input  type="password" th:field="*{password}" class="form-control" id="password" required="true">
+                </div>
+            </div>
+        </div>
+
+        <!--Campo para Estado-->
+        <div class="row">
+            <div class="form-group col-md-12">
+                <label class="col-md-3" for="estado">Estado actual del empleado:</label>
+                <div class="col-md-6">
+                    <select th:field="*{estado}" class="form-control" id="estado" required="true">
+                        <option th:value=1>Activo</option>
+                        <option th:value=0>Inactivo</option>
                     </select>
                 </div>
             </div>
