--- a/src/main/resources/templates/agregarEmpresa.html
+++ b/src/main/resources/templates/agregarEmpresa.html
@@ -20,7 +20,7 @@
 
 <body>
 <div class="container">
-
+    <button type="button" class="btn btn-danger" style="float:right "><a th:href="@{/logout}">Cerrar sesión</a></button>
     <h1> Agregar aqui los datos de la Empresa</h1>
     <br>
     <!--Crear formulario para que ingresen los datos de la empresa nueva-->
