Se implemento el login en el aplicativo, WebSecurityConfigurerAdapter ya no esta disponible toca mirar otro metodo para proteger las paginas para que se puede acceder por admin y usuario

--- a/src/main/resources/templates/agregarMovimiento.html
+++ b/src/main/resources/templates/agregarMovimiento.html
@@ -64,6 +64,18 @@
                 </div>
             </div>
         </div>
+
+        <!--Campo para el usuario responsable-->
+        <!--<div class="row">
+            <div class="form-group col-md-12">
+                <label class="col-md-3" for="usuario">Empleado responsable:</label>
+                <div class="col-md-6">
+                    <select th:field="*{usuario}" class="form-control" id="usuario" required="true">
+                        <option th:text="${httpServletRequest.remoteUser}" th:value="${IdEmpleado}"></option>
+                    </select>
+                </div>
+            </div>
+        </div> -->
         <!--Campo para fecha-->
         <div class="row">
             <div class="form-group col-md-12">
